--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prepare": "husky install",
     "prettier": "prettier -c --write \"src/**/*\"",
     "serve": "umi-serve",
-    "start": "cross-env UMI_ENV=dev umi dev",
+    "start": "cross-env UMI_ENV=dev umi dev --port=9953",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev umi dev",
     "start:no-mock": "cross-env MOCK=none UMI_ENV=dev umi dev",
     "start:no-ui": "cross-env UMI_UI=none UMI_ENV=dev umi dev",
@@ -69,6 +69,7 @@
     "react-dev-inspector": "^1.7.0",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
+    "rxjs": "^7.8.1",
     "umi": "^3.5.0"
   },
   "devDependencies": {
